--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "An example microservice for 497s",
   "main": "src/index.ts",
   "scripts": {
+    "start": "ts-node ./src/index.ts",
     "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "autoformat": "onchange 'src/**/*.ts' -- prettier --write {{changed}}"
   },
@@ -20,6 +21,12 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "onchange": "^7.0.2",
-    "prettier": "^2.1.2"
+    "prettier": "^2.1.2",
+    "typescript": "^4.0.3"
+  },
+  "dependencies": {
+    "@types/node": "^14.11.2",
+    "koa": "^2.13.0",
+    "koa-router": "^9.4.0"
   }
 }
