--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An example microservice for 497s",
   "main": "src/index.ts",
   "scripts": {
-    "start": "ts-node ./src/index.ts",
+    "start": "ts-node --files src/",
     "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "autoformat": "onchange 'src/**/*.ts' -- prettier --write {{changed}}"
   },
@@ -22,6 +22,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "onchange": "^7.0.2",
     "prettier": "^2.1.2",
+    "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
   },
   "dependencies": {
