--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/galactus-player/exemplar#readme",
   "devDependencies": {
+    "@types/socket.io": "^2.1.11",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "onchange": "^7.0.2",
@@ -27,7 +28,6 @@
   },
   "dependencies": {
     "@types/node": "^14.11.2",
-    "koa": "^2.13.0",
-    "koa-router": "^9.4.0"
+    "socket.io": "^2.3.0"
   }
 }
